Fixed border on mobile versions

--- a/public/styles/pages/admin.css
+++ b/public/styles/pages/admin.css
@@ -21,6 +21,7 @@
   @media screen and (max-width: 700px) {
     flex-direction: row;
     padding: 1rem;
+    border-right: none;
   }
 }
 
